--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "gaxios": "^2.1.0",
+    "googleapis": "^39.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
